# SINGULARITY

./: .gitignore  LICENSE  README.md  index.html
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INTEGRATION.md
scripts/: slb_benchmark.py
singularity-python/: README.md  pyproject.toml
singularity-python/singularity/: __init__.py
singularity-python/singularity/core/: __init__.py  blocks.py  codec.py  eviction.py  metrics.py  page_table.py  selector.py
singularity-python/singularity/integrations/: __init__.py  vllm_connector.py
singularity-python/singularity/sdk/: __init__.py  fabric.py  prefetch.py
singularity-python/singularity/transport/: __init__.py  base.py  memory.py  rdma.py
singularity-python/tests/: test_blocks.py  test_codec.py  test_eviction.py  test_fabric.py  test_metrics.py  test_prefetch.py  test_sdk_facade.py  test_selector.py  test_transport.py  test_vllm_connector.py
singularity-transport/: Cargo.toml
singularity-transport/src/: buffer.rs  fabric.rs  lib.rs  page.rs
