[package]
name = "singularity-transport"
version = "0.1.0"
edition = "2021"
description = "SINGULARITY RDMA/RoCE v2 Transport Fabric — Zero-copy GPU-to-GPU memory movement"
license = "Apache-2.0"

[dependencies]
rdma = "0.1"
libc = "0.2"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
